--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "start": "node ./dist/index.js",
-    "build": "tsc",
+    "start": "node ./dist/index.js && npm run prisma:generate",
+    "build": "npm install && tsc",
     "prisma:generate": "prisma generate"
   },
   "keywords": [],
