--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "build": "tsc && npx prisma generate",
-  "start": "node ./dist/index.js",
-  "dev": "ts-node-dev --respawn src/index.ts"
-},
-
+    "build": "tsc && npx prisma generate",
+    "start": "node ./dist/index.js",
+    "dev": "ts-node-dev --respawn src/index.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,6 +21,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/node": "^24.3.0",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
